[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/Menu.gd" type="Script" id=1]
[ext_resource path="res://menus/MenuBG.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/buttonFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://art/majorforce.ttf"

[sub_resource type="DynamicFont" id=2]
size = 300
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://art/majorforce.ttf"

[sub_resource type="DynamicFont" id=4]
size = 140
font_data = SubResource( 3 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBG" parent="." instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 211.0
margin_top = 208.0
margin_right = 2348.0
margin_bottom = 1232.0
custom_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 2137.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 2 )
text = "Gravity Reversal"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 2137.0
margin_bottom = 1024.0
custom_constants/separation = 20
alignment = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 2137.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="LevelSelectButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 2137.0
margin_bottom = 322.0
custom_fonts/font = ExtResource( 3 )
text = "Level Select"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 342.0
margin_right = 2137.0
margin_bottom = 493.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 513.0
margin_right = 2137.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 4 )
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
